--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ValerioL94/members-only#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^9.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
@@ -30,10 +31,10 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.3.4",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
